# module_trees-

./: Makefile  pyproject.toml
main_code/tests/: test_compress_images.py
main_code/trees_code/: calculating_size_dir.py  change_deep.py  compress_images.py  demo_depth_first_search.py  downcase_names.py  find_empty_dir.py  find_files.py  hidden_files_count.py  nodes_count.py
