[tool.poetry]
name = "trees"
version = "0.1.0"
description = ""
authors = ["vova <vladimir1012kov@gmail.com>"]
packages = [{include = "main_code"}]

[tool.poetry.scripts]
first = "main_code.scripts.test_work:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
